$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-03-25 [M] Removed language list, theme list and language flags from config (thread ID 58681) {GauGau}
2009-02-22 [M] Renamed PHPMailer and SMTP classes to avoid conflicts with other scripts {Nibbler}
2009-03-02 [B] Fixed HTML special characters in referer for hit/vote stats {Paver}
2009-03-02 [B] Added function to recursively delete folder/file structures as a fix for the unlink-issue in update script (thread ID 57514) {GauGau}
2009-02-26 [B] Fixed browser detect giving older IE version when user_agent gives multiple {Paver}
2009-02-26 [B] Fixed converting 'search_phrase' from array to string for table 'hit_stats' {Paver}
2009-02-20 [B] Fixed 'Selecting private pics as a category thumbnail' issue (thread ID 57898) {Nibbler}
2009-02-08 [B] Fixed minibrowser for Windows servers ('browsable interface' for 'batch add files') {Paver}
2009-02-06 [B] Changed redirect for login/logout pages as appropriate to avoid extraneous messages {Paver}
2009-02-06 [B] Fixed 'cookie_warning' on login page when anonymous access is not allowed {Paver}
2009-02-06 [C] Changed 'disapproved' to 'unapproved' in language keys as appropriate {Paver}
2009-01-19 [B] Fixed missing delimiter in basic.sql on exif table {SaWey}
2009-01-16 [B] Fix "Select a Keyword" list not refreshing to itself when click "Regenerate Dictionary" {Paver}
2009-01-16 [B] Fix "Regenerate Dictionary" including old keywords {Paver}
2009-01-16 [B] Fix bug in picture info for keyword separator in keywords field {Paver}
2009-01-15 [B] Fix approval status based on permissions in edit_one_pic - thread 57344 {Paver}