@@ -389,3 +389,5 @@ ALTER TABLE CPG_exif CHANGE `filename` `pid` int(11) NOT NULL;
 ALTER TABLE CPG_exif DROP INDEX `filename`, ADD PRIMARY KEY ( `pid` );
 
 ALTER TABLE CPG_sessions CHANGE `session_id` `session_id` char(32);
+
+DROP TABLE CPG_temp_data;
